--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
     font-family: 'Inter', sans-serif;
 
     color: #FFFFFF
@@ -28,9 +29,8 @@ body {
 
 #container {
     width: 360px;
-    margin: 0 auto;
-
-    border: 1px solid white;
+    margin: 56px auto 0;    
+    padding: 0 24px;
 }
 
 #profile {
@@ -38,6 +38,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 24px;
 }
 
 #profile > p {
@@ -50,4 +51,62 @@ body {
 #profile > img {
     width: 112px;
     padding-bottom: 1px    
+}
+
+#buttons__container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#buttons__container > li a {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 24px;
+    width: 264px;
+    border-radius: 8px;
+    line-height: 24px;
+    font-weight: 500;
+}
+
+.button {
+    border-radius: 8px;
+    border: 1px solid #FFFFFF80;
+    background: #FFFFFF1A;
+    text-align: center;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+
+    transition: all .3s ease;
+}
+
+.button:hover {
+    background: rgba(255, 255, 255, 0.05);
+    border: 1px solid white;
+}
+
+#socialMedias {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    padding: 24px 0;
+}
+
+.socialMedia__img {
+    width: 40px;
+    transition: all 0.3s ease;
+}
+
+.socialMedia__img:hover {
+    background: url('./images/Ellipse.svg') no-repeat center/cover;
+}
+
+#footer {
+    text-align: center;
 }
