--- a/styles/style.css
+++ b/styles/style.css
@@ -7,12 +7,34 @@
     
     font-family: 'Inter', sans-serif;
 
-    color: #FFFFFF
+    color: var(--text-color)
 }
 
 :root {
     --font-weigth-400: 400;
     --font-weight-500: 500;
+
+    --text-color: white;
+
+    --border-button: #FFFFFF80;
+    --background-button: #FFFFFF1A;
+}
+
+.light {
+    --text-color: black;
+    --url-background-light: url("../assets/bg-mobile-light.jpg");
+
+    --border-button: #00000080;
+    --background-button: #0000000D;
+    
+}
+
+.dark {
+    --text-color: white;
+
+    --url-background-light: url("../assets/bg-mobile.jpg");
+    --border-button: #FFFFFF80;
+    --background-button: #FFFFFF1A;
 }
 
 body {
@@ -24,7 +46,7 @@ body {
     */
 
     /* background: color img repeat position/size */
-    background: url('../assets/bg-mobile.jpg') no-repeat top center/cover;
+    background: var(--url-background-light) no-repeat top center/cover;
 }
 
 #container {
@@ -53,6 +75,31 @@ body {
     padding-bottom: 1px    
 }
 
+#switchMode {
+    width: 84px;
+    height: 35px;
+    border-radius: 20px;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    border: 1px solid var(--border-button);
+    background: var(--background-button);
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transition: justify 1.4s ease;
+}
+
+#switchMode section {
+    display: inline-flex;
+    background-color: var(--text-color);
+    padding: 12px;
+    border-radius: 50%;
+}
+
+#switchMode:hover {
+    justify-content: flex-end;
+}
+
 #buttons__container {
     display: flex;
     flex-direction: column;
@@ -76,8 +123,8 @@ body {
 
 .button {
     border-radius: 8px;
-    border: 1px solid #FFFFFF80;
-    background: #FFFFFF1A;
+    border: 1px solid var(--border-button);
+    background: var(--background-button);
     text-align: center;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -87,24 +134,34 @@ body {
 
 .button:hover {
     background: rgba(255, 255, 255, 0.05);
-    border: 1px solid white;
+    border: 1px solid var(--text-color);
 }
 
 #socialMedias {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
     padding: 24px 0;
+    gap: 10px
+}
+
+.socialMedia__container {
+    transition: background 0.3s ease;
+    padding: 12px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .socialMedia__img {
-    width: 40px;
-    transition: all 0.3s ease;
+    width: 24px;
+    height: 24px;
 }
 
-.socialMedia__img:hover {
-    background: url('./images/Ellipse.svg') no-repeat center/cover;
+.socialMedia__container:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
 }
 
 #footer {
