--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
 
     --border-button: #FFFFFF80;
     --background-button: #FFFFFF1A;
+
 }
 
 .light {
@@ -26,7 +27,10 @@
 
     --border-button: #00000080;
     --background-button: #0000000D;
-    
+
+    --background-socialMedia: #0000001A;
+
+    --switch-background-url: url('../assets/sun.svg');
 }
 
 .dark {
@@ -35,6 +39,10 @@
     --url-background-light: url("../assets/bg-mobile.jpg");
     --border-button: #FFFFFF80;
     --background-button: #FFFFFF1A;
+
+    --background-socialMedia: rgba(255, 255, 255, 0.2);
+
+    --switch-background-url: url('../assets/moon-stars.svg');
 }
 
 body {
@@ -75,32 +83,43 @@ body {
     padding-bottom: 1px    
 }
 
-#switchMode {
-    width: 84px;
-    height: 35px;
-    border-radius: 20px;
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
-    border: 1px solid var(--border-button);
-    background: var(--background-button);
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    transition: justify 1.4s ease;
+#switch {
+    width: 64px ;
+    position: relative;
+    margin: 4px auto;
 }
 
-#switchMode section {
-    display: inline-flex;
-    background-color: var(--text-color);
-    padding: 12px;
+#switch button {
+    width: 32px;
+    height: 32px; 
+    border: 0;
     border-radius: 50%;
+    background: var(--switch-background-url) white no-repeat center;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    transform: translateY(-50%);
+    top: 50%;
 }
 
-#switchMode:hover {
-    justify-content: flex-end;
+.light #switch button {
+    left: initial;
+    right: 0;
+}
+
+#switch span {
+    display: block;
+    width: 64px;
+    height: 24px;
+    background-color: var(--background-button);
+    border: 1px solid var(--border-button);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 999px;
 }
 
 #buttons__container {
+    padding: 24px 0;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -128,7 +147,6 @@ body {
     text-align: center;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-
     transition: all .3s ease;
 }
 
@@ -160,8 +178,7 @@ body {
 }
 
 .socialMedia__container:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
+    background-color: var(--background-socialMedia)
 }
 
 #footer {
