--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,12 @@ body {
 
 #profile > img {
     width: 112px;
-    padding-bottom: 1px    
+    padding-bottom: 1px;
+    transition: all 0.4s ease;   
+}
+
+#profile > img:hover {
+    transform: scale(1.1);
 }
 
 #switch {
